fixed some typos and reran eucalypt tree example

--- a/Modules/02_Intro_Bayes/output/tree_model03.html
+++ b/Modules/02_Intro_Bayes/output/tree_model03.html
@@ -4,7 +4,7 @@
 
 <head>
 <title>MCMC Plots: samples03$samples</title>
-<link rel="stylesheet" type="text/css" href="file:///C:/Users/bpeas/AppData/Local/R/win-library/4.2/mcmcplots/MCMCoutput.css" />
+<link rel="stylesheet" type="text/css" href="file:///C:/R/mcmcplots/MCMCoutput.css" />
 </head>
 <body>
 <div id="outer">
